WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23593
RenderThemeChromium[Win,Mac].cpp don't compile after renderbox changes
https://bugs.webkit.org/show_bug.cgi?id=23593
Summary
RenderThemeChromium[Win,Mac].cpp don't compile after renderbox changes
Tony Chang
Reported
2009-01-28 11:29:00 PST
Patch coming...
Attachments
[1/1] Compile fixes for RenderThemeChromiumMac and RenderThemeChromiumWin.
(3.82 KB, patch)
2009-01-28 11:38 PST
,
Tony Chang
hyatt
: review+
Details
Formatted Diff
Diff
[1/1] Compile fixes for RenderThemeChromiumMac and RenderThemeChromiumWin.
(3.91 KB, patch)
2009-01-28 11:51 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2009-01-28 11:38:43 PST
Created
attachment 27113
[details]
[1/1] Compile fixes for RenderThemeChromiumMac and RenderThemeChromiumWin. This is a follow up for hyatt's RenderBox changes. --- WebCore/ChangeLog | 12 ++++++++++++ WebCore/rendering/RenderThemeChromiumMac.mm | 6 ++++-- WebCore/rendering/RenderThemeChromiumWin.cpp | 18 ++++++++++-------- 3 files changed, 26 insertions(+), 10 deletions(-)
Dave Hyatt
Comment 2
2009-01-28 11:43:07 PST
Comment on
attachment 27113
[details]
[1/1] Compile fixes for RenderThemeChromiumMac and RenderThemeChromiumWin. You should add isBox() checks and bail with early returns so you don't do a bad cast by accident. Fix that and r=me.
Tony Chang
Comment 3
2009-01-28 11:51:41 PST
Created
attachment 27114
[details]
[1/1] Compile fixes for RenderThemeChromiumMac and RenderThemeChromiumWin. This is a follow up for hyatt's RenderBox changes. --- WebCore/ChangeLog | 12 ++++++++++++ WebCore/rendering/RenderThemeChromiumMac.mm | 9 +++++++-- WebCore/rendering/RenderThemeChromiumWin.cpp | 21 +++++++++++++-------- 3 files changed, 32 insertions(+), 10 deletions(-)
Darin Fisher (:fishd, Google)
Comment 4
2009-01-28 12:37:54 PST
http://trac.webkit.org/changeset/40321
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug