2009-01-28  Tony Chang  <tony@chromium.org>

Reviewed by David Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=23593
        Compile fixes for RenderThemeChromiumMac and RenderThemeChromiumWin.
        This is a follow up for hyatt's RenderBox changes.

        * rendering/RenderThemeChromiumMac.mm:
        (WebCore::RenderThemeChromiumMac::baselinePosition):
        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::paintMenuList):



Canonical link: https://commits.webkit.org/32509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40321 268f45cc-cd09-0410-ab3c-d52691b4dbfc